--- a/AdventureGameProj.vcxproj
+++ b/AdventureGameProj.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -129,17 +130,31 @@
   <ItemGroup>
     <ClCompile Include="AdeventureGame.cpp" />
     <ClCompile Include="AdventureGameProj.cpp" />
+    <ClCompile Include="Bomb.cpp" />
+    <ClCompile Include="CollectableItems.cpp" />
+    <ClCompile Include="Door.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point.cpp" />
+    <ClCompile Include="Riddle.cpp" />
     <ClCompile Include="Screen.cpp" />
+    <ClCompile Include="SteppedOnItems.cpp" />
+    <ClCompile Include="Torch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdeventureGame.h" />
+    <ClInclude Include="Bomb.h" />
+    <ClInclude Include="CollectableItems.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="Direction.h" />
+    <ClInclude Include="Door.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="Riddle.h" />
     <ClInclude Include="Screen.h" />
+    <ClInclude Include="SteppedOnItems.h" />
+    <ClInclude Include="Torch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
