--- a/AdventureGameProj.vcxproj
+++ b/AdventureGameProj.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="AdventureGameProj.cpp" />
     <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="CollectableItems.cpp" />
+    <ClCompile Include="Console.cpp" />
     <ClCompile Include="Door.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Player.cpp" />
