--- a/AdventureGameProj.vcxproj
+++ b/AdventureGameProj.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Riddle.cpp" />
     <ClCompile Include="Screen.cpp" />
     <ClCompile Include="SteppedOnItems.cpp" />
+    <ClCompile Include="Switcher.cpp" />
     <ClCompile Include="Torch.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -155,6 +156,7 @@
     <ClInclude Include="Riddle.h" />
     <ClInclude Include="Screen.h" />
     <ClInclude Include="SteppedOnItems.h" />
+    <ClInclude Include="Switcher.h" />
     <ClInclude Include="Torch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
