--- a/AdventureGameProj.vcxproj
+++ b/AdventureGameProj.vcxproj
@@ -131,14 +131,17 @@
     <ClCompile Include="AdeventureGame.cpp" />
     <ClCompile Include="AdventureGameProj.cpp" />
     <ClCompile Include="Bomb.cpp" />
+    <ClCompile Include="C++ AdeventureGame.cpp" />
     <ClCompile Include="CollectableItems.cpp" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="Door.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Riddle.cpp" />
     <ClCompile Include="Screen.cpp" />
+    <ClCompile Include="Spring.cpp" />
     <ClCompile Include="SteppedOnItems.cpp" />
     <ClCompile Include="Switcher.cpp" />
     <ClCompile Include="Torch.cpp" />
@@ -148,13 +151,16 @@
     <ClInclude Include="Bomb.h" />
     <ClInclude Include="CollectableItems.h" />
     <ClInclude Include="Console.h" />
+    <ClInclude Include="diff Screen.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="Door.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="Obstacle.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Riddle.h" />
     <ClInclude Include="Screen.h" />
+    <ClInclude Include="Spring.h" />
     <ClInclude Include="SteppedOnItems.h" />
     <ClInclude Include="Switcher.h" />
     <ClInclude Include="Torch.h" />
